# BruGenie

./: .gitignore  .gitmodules  ADS1115.cpp  ADS1115Cmake  CMakeLists.txt  LICENSE  README.md
Initial_Framework/: CMakeLists.txt  volume_calc_test.cpp
Initial_Framework/DS18B20_TempSensor/: DS18B20.cpp  DS18B20.h  DS18B20Usage.cpp
Initial_Framework/Framework_code/: Ultrasound_Sensors.cpp
Initial_Framework/header_files/: Ultrasound_Sensors.h
Non_Project_Examples/: CMakeLists.txt  Example.cpp
Non_Project_Examples/eexample_header_files/: Hello_Team.h
Non_Project_Examples/example_cpp_file/: Hello_Team.cpp
real_time_drivers/VL53L4CD/VL53L4CD_LinuxDriver_V2.3.2/: CMakeLists.txt  README.md  changelog.txt
real_time_drivers/VL53L4CD/VL53L4CD_LinuxDriver_V2.3.2/kernel/: Kbuild  Makefile  stmvl53l4cd.cpp  stmvl53l4cd.dts  stmvl53l4cd_rock3a.dts
real_time_drivers/VL53L4CD/VL53L4CD_LinuxDriver_V2.3.2/user/examples/: Example_1_ranging_basic.cpp  Example_2_low_power.cpp  Example_3_high_accuracy.cpp  Example_4_fast_ranging.cpp  Example_5_calibrate_offset_xtalk.cpp  Example_6_detection_thresholds.cpp  examples.h
real_time_drivers/VL53L4CD/VL53L4CD_LinuxDriver_V2.3.2/user/platform/: platform.cpp  platform.h  types.h
real_time_drivers/VL53L4CD/VL53L4CD_LinuxDriver_V2.3.2/user/test/: CMakeLists.txt  Makefile  menu.cpp
real_time_drivers/VL53L4CD/VL53L4CD_LinuxDriver_V2.3.2/user/uld-driver/: VL53L4CD_api.cpp  VL53L4CD_api.h  VL53L4CD_calibration.h
real_time_drivers/VL53L4CD/user/: CMakeLists.txt
real_time_drivers/VL53L4CD/user/examples/: Example_1_ranging_basic.cpp  Example_3_high_accuracy.cpp  Example_4_fast_ranging.cpp  Example_6_detection_thresholds.cpp  examples.h
real_time_drivers/VL53L4CD/user/test/: CMakeLists.txt  menu  menu.cpp
real_time_drivers/VL53L4CD/user/uld-driver/: VL53L4CD_api.cpp  VL53L4CD_api.h
src/ADS1115_Weight_Sensor/: ADS1115.cpp  CMakeLists.txt
src/Control_pins/: CMakeLists.txt  Doxyfile  Pin_Control_Wrapper.cpp  Pin_Control_Wrapper.h
src/Control_pins/test/: CMakeLists.txt  Pin_Test.cpp
src/DS18B20_TempSensor/: CMakeLists.txt  DS18B20.cpp  DS18B20Usage.cpp  Doxyfile
src/Solenoid_Controller/: CMakeLists.txt  Doxyfile  Solenoid_Controller.cpp  Solenoid_Controller.h
src/Solenoid_Controller/test/: CMakeLists.txt  solenoid_controller_test.cpp
src/VL53L4CD/: CMakeLists.txt  Doxyfile
src/VL53L4CD/user/: CMakeLists.txt
src/VL53L4CD/user/examples/: Example_1_ranging_basic.cpp  Example_2_low_power.cpp  boot_sensor_test.cpp  changing_address_test.cpp  examples.h
src/VL53L4CD/user/test/: CMakeLists.txt  I2C_Tests.cpp  boot_sensor_1.cpp  boot_sensor_2.cpp  menu.cpp
src/VL53L4CD/user/uld-driver/: VL53L4CD_api.cpp  VL53L4CD_api.h
src/Volume_Comms/: CMakeLists.txt  Doxyfile  TOF_1callback.h  TOF_2callback.h  Volume_Comms.cpp  Volume_Comms.h
src/Volume_Comms/test/: CMakeLists.txt  Volume_calculation_tests.cpp  change_address_tests.cpp
src/Volume_Comms/thread_controller_class/: CMakeLists.txt  thread_controller.cpp  thread_controller.h
src/demo/: CMakeLists.txt  main.cpp
src/motor/: CMakeLists.txt  Doxyfile  Parallax_INC4_Servo_Motor.h  Parallax_INC4_Servo_motor.cpp
src/motor/test/: CMakeLists.txt  Motor_test.cpp
